[options]
scripts = 
	
dependency_links = 
	
packages = find:
install_requires = 
	appyratus
  ordered_set
  pandas
  BTrees

[metadata]
name = store
description = Pure Python in-memory SQL-like object store
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.0
author = Daniel Gabriele
author_email = 
url = https://github.com/dgabriele/store
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License